{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "5eefc7bb-64d8-44cc-9316-c4dc73b84c0c",
            "actions": [
                {
                    "name": "WASD",
                    "type": "PassThrough",
                    "id": "19c50b04-9acf-4519-8077-5bb849e5aa62",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "ArrowKeys",
                    "type": "PassThrough",
                    "id": "c507c3c9-b93e-4a13-b573-3417253ddf14",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "b1843627-e2ea-4825-8abf-b134fe4ca0a1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleDebug",
                    "type": "Button",
                    "id": "d4ce159f-6942-40eb-813d-630e27126a48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseClick",
                    "type": "Button",
                    "id": "3656b799-1b8a-4346-85ce-cfee0b7b9f0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StopMoving",
                    "type": "Button",
                    "id": "b672c65a-d6de-45fa-9732-34be5c9d9070",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "b955fbbc-301f-41b0-a775-32ea6669d468",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "SelectHero",
                    "type": "Button",
                    "id": "52b350d9-73de-4ab5-a585-0568e567e7bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "f0f06d9d-d668-4b6a-9d61-63d4598855f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "66d7e9a7-e3c6-48f0-bfd8-64c8f3474379",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QSkill",
                    "type": "Button",
                    "id": "c727bd57-90f0-4efd-b0c8-730facbcf0b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WSkill",
                    "type": "Button",
                    "id": "53339150-cf84-4bce-af1e-b50fb117959b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ESkill",
                    "type": "Button",
                    "id": "6a64c433-1f16-454d-a7c4-74c594d4b285",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RSkill",
                    "type": "Button",
                    "id": "f8ac95eb-3485-457a-b296-99306a034d24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewScoreboard",
                    "type": "Button",
                    "id": "b9a12fce-a070-4c9c-815a-868bd773b983",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "55c5ab97-feba-4b5c-affc-87d53fd01c25",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97b0e949-70e1-4512-9296-165d05d69f3f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6b110071-3686-4f3a-b931-812885b773f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "68e8452b-88b6-4e72-892c-4202cbb495d0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "49b91626-c68a-4d80-8ab5-2f94d1372f8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea08f803-78e6-4589-a867-709928b8f5e9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08778b78-503f-4661-a23e-932e3cf17299",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c622e80-ea58-4695-91b8-b57706c886df",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ba1d657-a47e-4561-ad44-5413bb83f2de",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopMoving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "5adedf28-2f84-4e5a-81d4-e017d107482f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowKeys",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "10ef607d-0d3c-4e06-b66c-bef9440194d5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c99bb20b-e550-4a94-b327-0bfc7295b885",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "88606dcb-cf21-456b-b9f8-0ab941846eb8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a6cb2126-d79d-4a20-8851-c631efdee626",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c81e73d1-7ea1-479d-adf6-edeeaf15e011",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abdcb94e-075f-4088-b862-5a23de3e6f23",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectHero",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b137ac6c-bfd5-4d70-9343-a85839d3f467",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "334b7ede-63a3-446c-b9d6-cfeb97b87875",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "659c0e7a-7d46-45f2-b3fe-2759b74393b3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4676fe00-3d96-4ae2-b062-d3494d11c937",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc8f2d29-3ec6-40a1-ac24-0ad79e3a28d6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ESkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe360c4-8ae7-495b-a19d-5d1c3835239b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fc52d52-835d-4265-ba3e-322f7892a532",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewScoreboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}